Cambio de nombres Proyecto y Oportunidad y Guardar info d client en Pres
• Guardar los datos del cliente necesarios en el presupuesto cuando se crea automáticamente desde un proyecto finalizado
• Cambiar todas las palabras que digan proyecto por ticket
• Cambiar todas las palabras que digan oportunidad por presupuesto

--- a/lang/es/es.json
+++ b/lang/es/es.json
@@ -160,7 +160,7 @@
     "Create": "Crear",
     "Create & Add Another": "Crear & Añadir otro",
     "Create :resource": "Crear :resource",
-    "Create a new team to collaborate with others on projects.": "Cree un nuevo equipo para colaborar con otros en proyectos.",
+    "Create a new team to collaborate with others on projects.": "Cree un nuevo equipo para colaborar con otros en tickets.",
     "Create Account": "Crear cuenta",
     "Create API Token": "Crear Token API",
     "Create New Team": "Crear nuevo equipo",
